--- a/AdventOfCode.2023.Tdd.Xunit/AdventOfCode2023.Tdd.Xunit.csproj
+++ b/AdventOfCode.2023.Tdd.Xunit/AdventOfCode2023.Tdd.Xunit.csproj
@@ -49,10 +49,9 @@
     <None Update="Week2\Day8\Input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Week2\Day9\InputParsers\" />
+    <None Update="Week2\Day9\Input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
