--- a/AdventOfCode.2023.Tdd.Xunit/AdventOfCode2023.Tdd.Xunit.csproj
+++ b/AdventOfCode.2023.Tdd.Xunit/AdventOfCode2023.Tdd.Xunit.csproj
@@ -49,6 +49,9 @@
     <None Update="Week2\Day10\Input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Week2\Day11\Input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Week2\Day8\Input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
