Day 12 (or how far I've gotten till I got less than Christmassy)

--- a/AdventOfCode.2023.Tdd.Xunit/AdventOfCode2023.Tdd.Xunit.csproj
+++ b/AdventOfCode.2023.Tdd.Xunit/AdventOfCode2023.Tdd.Xunit.csproj
@@ -52,6 +52,9 @@
     <None Update="Week2\Day11\Input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Week2\Day12\Input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Week2\Day8\Input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
