--- a/AdventOfCode.2023.Tdd.Xunit/AdventOfCode2023.Tdd.Xunit.csproj
+++ b/AdventOfCode.2023.Tdd.Xunit/AdventOfCode2023.Tdd.Xunit.csproj
@@ -55,6 +55,9 @@
     <None Update="Week2\Day12\Input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Week2\Day13\Input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Week2\Day8\Input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
