--- a/AdventOfCode.2023.Tdd.Xunit/AdventOfCode2023.Tdd.Xunit.csproj
+++ b/AdventOfCode.2023.Tdd.Xunit/AdventOfCode2023.Tdd.Xunit.csproj
@@ -58,10 +58,16 @@
     <None Update="Week2\Day13\Input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Week2\Day14\Input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Week2\Day8\Input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Week2\Day9\Input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Week3\Day15\Input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
